--- a/SPA/angular.json
+++ b/SPA/angular.json
@@ -58,7 +58,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -103,6 +109,6 @@
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": "a00c4331-0e27-4c07-9751-68338d256e0d"
   }
 }
